# DOK4

./: .gitignore  README.md  hello  requirements.txt  test.py
scripts/: vehicle_command.py
src/final_mission/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/final_mission/config/: config.yaml  waypoint.yaml
src/final_mission/flight_test/: autonomous_flight_mission_offboard.py  autonomous_precision_landing.py  combined_flight_landing_offboard.py  geometry_utils.py  test.py
src/final_mission/launch/: final_mission.launch.py  offboard_test.launch.py  precision_landing.launch.py  sim_final_mission.launch.py  test.launch.py
src/final_mission/scripts/: final_mission.py
src/final_mission/src/: final_mission.py  fsm.cpp  geometry_utils.py  mav_mission.py
src/fixedwing_control/: setup.py
src/fixedwing_control/config/: config.yaml
src/fixedwing_control/fixedwing_control/: fixedwing_control.py  smooth_fixedwing_control.py
src/multirotor_control/: setup.py
src/multirotor_control/config/: config.yaml
src/multirotor_control/multirotor_control/: multirotor_control.py
src/precision_landing/: CMakeLists.txt  package.xml  setup.py
src/precision_landing/launch/: aruco.launch.py
src/precision_landing/precision_landing/: aruco_detector.py  precision_landing.py
src/precisoin_landing/: package.xml  setup.cfg  setup.py
src/px4_basic/: CMakeLists.txt  package.xml
src/rescue_mission/: package.xml  setup.cfg  setup.py
src/vtol_control/: setup.py
src/vtol_control/config/: config.yaml
src/yolo_based_landing/: CMakeLists.txt  package.xml
